# VolgaBL

./: .clang-format  .gitignore  CMakeLists.txt  Doxyfile  README.md  disk_layout.map  i686-elf.txt  import.cmake  meson.build
.githooks/: post-commit  pre-commit
.github/actions/depend/: action.yml  index.js  package.json
.github/workflows/: VLGBL-Legacy-version.yml  build.yml  codacy.yml  main.yml  security.yml  test.yml
bootloader/: CMakeLists.txt
bootloader/MBR/: CMakeLists.txt  mbr.asm
bootloader/SSL/: CMakeLists.txt
bootloader/SSL/include/bl/: bios.h  defines.h  io.h  mem.h  types.h  utils.h
bootloader/SSL/src/: bios.c  bootstrap.asm  gcc_arithmetics64.c  io.c  mem.c  ssl_entry.c  string.c  utils.c
bootloader/TSL/: CMakeLists.txt  TSL.ld
bootloader/TSL/include/bl/: defines.h  io.h  pe.h  ramfs.h  string.h  types.h  utils.h
bootloader/TSL/src/: bootstrap.asm  gcc_arithmetics64.c  io.c  pe.c  ramfs.c  tsl_entry.c  utils.c
bootloader/common/: meson.build
bootloader/common/config/: version.h.in
bootloader/common/include/: attributes.h  stages.h
bootloader/common/include/cpu/: integer.h
bootloader/common/include/hardware/: drive.h
bootloader/common/include/hardware/drive/mapping/: gpt.h  mbr.h
bootloader/common/include/stages/: isoboot.h  mbr.h  pc-bios.h  ssl.h  tsl.h
bootloader/isoboot/: isoboot.ld  meson.build  pre_init.S
bootloader/legacy/: CMakeLists.txt  mbr.asm  mbr.ld
bootloader/legacy/MBR/: CMakeLists.txt  mbr.ld
bootloader/legacy/SSL/: CMakeLists.txt  SSL.ld
bootloader/legacy/SSL/include/bl/: bios.h  defines.h  io.h  mem.h  string.h  types.h  utils.h
bootloader/legacy/SSL/src/: bios.asm  bios.c  bootstrap.asm  gcc_arithmetics64.c  io.c  ll_utils.asm  mem.c  ssl_entry.c  start.asm  string.c  utils.c
bootloader/legacy/TSL/: CMakeLists.txt  TSL.ld
bootloader/legacy/TSL/include/bl/: defines.h  io.h  types.h  utils.h
bootloader/legacy/TSL/src/: bootstrap.asm  io.c  tsl_entry.c  utils.c
bootloader/mbr/: mbr.S  mbr.ld  meson.build
cmake/: create_image.cmake  dependencies.cmake  flags.cmake  options.cmake  toolchain.cmake
cmake/toolchains/: 8086.cmake
docs/html/: annotated.html  bios_8h_source.html  classes.html  defines_8h_source.html  dir_19022d96b586671b8660603192be213a.html  dir_2dead01e393adfc0e882667ee3e5721e.html  dir_3ade0e363eb9ea9eefd74b2a672a59c4.html  dir_47c414bdc9156771825fa7c502991823.html  dir_4b9bd85b33d201cdd84a63c6b05f7a74.html  dir_5ec6779537929b76ac9042bd26abaa49.html  dir_63772b626f2709090f0bdca0f40827b4.html  dir_6956155f9dc97639d34cf7dd27dbf69d.html  dir_713acbf0246a22292b4b09ce6f71bf4b.html  dir_809086134312bccb0c1709601c817c74.html  dir_8f6765bfd0e2d4ff73ca852e034c519e.html  dir_95184fd9bed3ca1f63a503303d942f41.html  dir_9c76c57719432853f9da2cc80aef6323.html  dir_9f0a4dbf9c0400a6423beb4864a19a07.html  dir_ec0a1ab8310f073b7b83e83e8288549f.html  files.html  globals.html  globals_func.html  index.html  io_8h_source.html  md__2home_2arsenez_2Documents_2projects_2VolgaOS_2README.html  mem_8h_source.html  pages.html  ssl__entry_8c.html  string_8h_source.html  struct__DAP-members.html  struct__DAP.html  struct__GDT32__entry-members.html  struct__GDT32__entry.html  struct__GDTR32-members.html  struct__GDTR32.html  struct__GPT__header-members.html  struct__GPT__header.html  struct__GPT__partition__array-members.html  struct__GPT__partition__array.html  struct__GPT__partition__entry-members.html  (+13 more)
docs/html/search/: all_1.js  all_2.js  classes_0.js  files_0.js  functions_0.js  pages_0.js  searchdata.js
